fix: remove scrollbar

--- a/client/index.scss
+++ b/client/index.scss
@@ -295,6 +295,8 @@ body {
   overflow: auto;
   height: 432.95px;
   width: 407.03px;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .custom-tooltip {
